[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/CharacterAvatar.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.11307, 7.7548 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCastTopLeft" type="RayCast2D" parent="."]
position = Vector2( 0, -7 )
enabled = true
cast_to = Vector2( -4, 0 )

[node name="RayCastTopRight" type="RayCast2D" parent="."]
position = Vector2( 0, -7 )
enabled = true
cast_to = Vector2( 4, 0 )

[node name="RayCastBottomLeft" type="RayCast2D" parent="."]
position = Vector2( 0, 7 )
enabled = true
cast_to = Vector2( -4, 0 )

[node name="RayCastBottomRight" type="RayCast2D" parent="."]
position = Vector2( 0, 7 )
enabled = true
cast_to = Vector2( 4, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 2.0
